fix(top-bar): properly align end container (#DS-3886) (#879)

--- a/packages/components/top-bar/top-bar.scss
+++ b/packages/components/top-bar/top-bar.scss
@@ -1,5 +1,24 @@
 @use '../core/styles/common/tokens';
 
+@mixin _overflow-items-margins {
+    padding: var(--kbq-size-border-width);
+
+    > .kbq-overflow-item {
+        &:not(:last-of-type) {
+            margin-right: var(--kbq-top-bar-container-end-gap);
+        }
+
+        // apply margin if the last item needs to be alwaysVisible
+        &:last-of-type:is(.kbq-overflow-item_always-visible) + .kbq-overflow-items-result {
+            margin-left: var(--kbq-top-bar-container-end-gap);
+        }
+    }
+
+    .kbq-overflow-items-result:first-child {
+        margin-right: var(--kbq-top-bar-container-end-gap);
+    }
+}
+
 .kbq-top-bar {
     display: flex;
     align-items: center;
@@ -12,49 +31,46 @@
     padding: var(--kbq-top-bar-padding-vertical) var(--kbq-top-bar-padding-horizontal);
     border-radius: var(--kbq-top-bar-border-radius);
 
+    &.kbq-top-bar_with-shadow {
+        box-shadow: var(--kbq-top-bar-shadow-bottom);
+        transition: box-shadow var(--kbq-top-bar-shadow-transition);
+    }
+
     .kbq-top-bar-spacer {
         height: 100%;
         flex: 0 0 var(--kbq-top-bar-spacer-min-width);
     }
 
-    .kbq-top-bar-container__start {
-        display: flex;
-        gap: var(--kbq-top-bar-container-start-gap);
-        flex: 1 0 var(--kbq-top-bar-container-start-basis);
-        justify-content: flex-start;
-        min-width: 0;
-    }
-
-    .kbq-top-bar-container__end {
-        display: flex;
-        gap: var(--kbq-top-bar-container-end-gap);
-        justify-content: end;
-    }
-
-    .kbq-top-bar-container__with-overflow-items {
-        gap: unset;
-        justify-content: unset;
-        padding: 1px;
-
-        > .kbq-overflow-item {
-            &:not(:last-of-type) {
-                margin-right: var(--kbq-top-bar-container-end-gap);
-            }
-
-            // apply margin if the last item needs to be alwaysVisible
-            &:last-of-type:is([aria-hidden='false']) + .kbq-overflow-items-result {
-                margin-left: var(--kbq-top-bar-container-end-gap);
-            }
+    .kbq-top-bar-container {
+        &:has(> .kbq-overflow-items) {
+            gap: unset;
+            overflow: hidden;
         }
 
-        .kbq-overflow-items-result:first-child {
-            margin-right: var(--kbq-top-bar-container-end-gap);
+        .kbq-overflow-items {
+            @include _overflow-items-margins;
         }
-    }
 
-    &.kbq-top-bar_with-shadow {
-        box-shadow: var(--kbq-top-bar-shadow-bottom);
-        transition: box-shadow var(--kbq-top-bar-shadow-transition);
+        &.kbq-top-bar-container__start {
+            display: flex;
+            gap: var(--kbq-top-bar-container-start-gap);
+            flex: 1 0 var(--kbq-top-bar-container-start-basis);
+            justify-content: flex-start;
+            min-width: 0;
+        }
+
+        &.kbq-top-bar-container__end {
+            display: flex;
+            gap: var(--kbq-top-bar-container-end-gap);
+            justify-content: end;
+        }
+
+        &.kbq-top-bar-container__with-overflow-items {
+            gap: unset;
+            justify-content: unset;
+
+            @include _overflow-items-margins;
+        }
     }
 
     @include tokens.kbq-typography-level-to-styles-css-variables(typography, text-normal);
